--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "homepage": "https://andallfor.github.io/andallfor-home",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d docs"
+    "preview": "vite preview"
   },
   "dependencies": {
     "andallfor-home": "file:",
